# EggClicker

./: Cargo.toml  README.md
assets/textures/: chicken.xcf  egg.xcf
src/: app.rs  config.rs  gfx.rs  main.rs  src.7z  ui.rs
