[package]
name = "clicker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking"]}
bevy_pixel_camera = "0.4.1"
bigint = "4.4.3"
num-bigint = "0.4.3"
num-traits = "0.2.15"
rand = "0.8.5"
